--- a/Vie/NIBs/en.lproj/FWGameViewController.xib
+++ b/Vie/NIBs/en.lproj/FWGameViewController.xib
@@ -35,7 +35,11 @@
                             </connections>
                         </barButtonItem>
                         <barButtonItem style="plain" systemItem="flexibleSpace" id="Tlc-K4-f1K"/>
-                        <barButtonItem title="Back" id="EQn-Xs-DPW"/>
+                        <barButtonItem title="Back" id="EQn-Xs-DPW">
+                            <connections>
+                                <action selector="backButtonTapped:" destination="-1" id="atX-kL-Mde"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem title="Next" id="ggn-5M-jae">
                             <connections>
                                 <action selector="nextButtonTapped:" destination="-1" id="DQv-oM-nGc"/>
