--- a/Vie/NIBs/en.lproj/FWGameViewController.xib
+++ b/Vie/NIBs/en.lproj/FWGameViewController.xib
@@ -22,7 +22,7 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" id="s64-Ux-IZu" userLabel="Game Board View" customClass="FWGameBoardView">
+                <view contentMode="scaleToFill" id="s64-Ux-IZu" userLabel="Game Board View" customClass="FWBoardView">
                     <rect key="frame" x="0.0" y="20" width="320" height="504"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
