--- a/Vie/View Controllers/FWMainViewController.xib
+++ b/Vie/View Controllers/FWMainViewController.xib
@@ -8,6 +8,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FWMainViewController">
             <connections>
                 <outlet property="gameBoardContainerView" destination="zyv-B5-ivT" id="WOK-iF-vDr"/>
+                <outlet property="gameBoardOverlayView" destination="Xq9-hp-5x0" id="M9F-K4-nT1"/>
                 <outlet property="mainContentContainerView" destination="EHA-0i-GZX" id="fgy-ax-O5l"/>
                 <outlet property="mainMenuViewController" destination="6Uw-Qa-Peu" id="eRG-rw-ICH"/>
                 <outlet property="menuNavigationController" destination="HXR-kX-qCx" id="sf2-Ym-urv"/>
@@ -36,6 +37,15 @@
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <gestureRecognizers/>
                             <inset key="insetFor6xAndEarlier" minX="0.0" minY="20" maxX="0.0" maxY="0.0"/>
+                        </view>
+                        <view hidden="YES" opaque="NO" contentMode="scaleToFill" id="Xq9-hp-5x0" userLabel="Game Board Overlay">
+                            <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            <inset key="insetFor6xAndEarlier" minX="0.0" minY="20" maxX="0.0" maxY="0.0"/>
+                            <connections>
+                                <outletCollection property="gestureRecognizers" destination="CRV-fi-2Q1" appends="YES" id="P0B-cp-acZ"/>
+                            </connections>
                         </view>
                         <navigationBar contentMode="scaleToFill" barStyle="black" translucent="NO" id="sdK-u5-LRE">
                             <rect key="frame" x="0.0" y="20" width="320" height="44"/>
@@ -101,5 +111,10 @@
                 </viewController>
             </viewControllers>
         </navigationController>
+        <tapGestureRecognizer id="CRV-fi-2Q1" userLabel="Game Board Overlay Tap Gesture Recognizer">
+            <connections>
+                <action selector="handleGameBoardOverlayTapped:" destination="-1" id="rQp-4s-uj3"/>
+            </connections>
+        </tapGestureRecognizer>
     </objects>
 </document>
