--- a/Vie/View Controllers/FWGameViewController.xib
+++ b/Vie/View Controllers/FWGameViewController.xib
@@ -42,7 +42,7 @@
                     <items>
                         <barButtonItem systemItem="compose" id="uxD-Lm-yFK">
                             <connections>
-                                <action selector="generateNewBoardButtonTapped:" destination="-1" id="sjA-Ph-6mP"/>
+                                <action selector="menuButtonTapped:" destination="-1" id="nCm-3Y-LWE"/>
                             </connections>
                         </barButtonItem>
                         <barButtonItem style="plain" systemItem="flexibleSpace" id="NQX-oF-5Lo"/>
