--- a/Vie/View Controllers/Menu/FWGameSettingsViewController.xib
+++ b/Vie/View Controllers/Menu/FWGameSettingsViewController.xib
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FWGameSettingsViewController">
             <connections>
-                <outlet property="navigationBar" destination="tDM-ca-suz" id="Zm4-Ov-vFY"/>
                 <outlet property="scrollView" destination="G1k-8z-yMz" id="Bga-H4-RYc"/>
                 <outlet property="view" destination="IHF-Ba-l0f" id="zDk-pv-uLO"/>
             </connections>
@@ -17,24 +16,16 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <navigationBar contentMode="scaleToFill" translucent="NO" id="tDM-ca-suz">
-                    <rect key="frame" x="0.0" y="20" width="320" height="44"/>
+                <view contentMode="scaleToFill" id="Hi5-aH-rlq" customClass="FWTitleBar">
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="58"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                    <items>
-                        <navigationItem title="menu" id="LaJ-ft-34N">
-                            <barButtonItem key="leftBarButtonItem" systemItem="organize" id="kVC-JA-JVe">
-                                <connections>
-                                    <action selector="closeButtonTapped:" destination="-1" id="bOe-kR-fdf"/>
-                                </connections>
-                            </barButtonItem>
-                        </navigationItem>
-                    </items>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <connections>
-                        <outlet property="delegate" destination="-1" id="CyZ-lP-IwE"/>
+                        <outlet property="delegate" destination="-1" id="sAa-iK-zf3"/>
                     </connections>
-                </navigationBar>
+                </view>
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" directionalLockEnabled="YES" showsHorizontalScrollIndicator="NO" id="G1k-8z-yMz">
-                    <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                    <rect key="frame" x="0.0" y="58" width="320" height="510"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 </scrollView>
