--- a/Vie/View Controllers/FWGameViewController.xib
+++ b/Vie/View Controllers/FWGameViewController.xib
@@ -1,22 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
     <dependencies>
-        <deployment defaultVersion="1792" identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FWGameViewController">
             <connections>
                 <outlet property="adBannerView" destination="JUg-5I-gZc" id="r0b-hn-nLl"/>
-                <outlet property="backButtonItem" destination="EQn-Xs-DPW" id="gFa-tH-S6t"/>
                 <outlet property="gameBoardView" destination="s64-Ux-IZu" id="Njk-7z-XhD"/>
-                <outlet property="generateNewBoardButtonItem" destination="uxD-Lm-yFK" id="1sq-AH-M53"/>
-                <outlet property="navigationBar" destination="prY-BZ-o0f" id="eI7-6k-7FZ"/>
-                <outlet property="nextButtonItem" destination="ggn-5M-jae" id="1hC-kS-vO8"/>
-                <outlet property="pauseButtonItem" destination="4cG-Rg-Dn7" id="6Nz-Og-3Ra"/>
-                <outlet property="playButtonItem" destination="dOX-pU-ltu" id="E4j-hR-ULu"/>
-                <outlet property="restartButtonItem" destination="wEd-Ll-blh" id="CMe-Wg-qEK"/>
-                <outlet property="toolbar" destination="auv-ld-PEy" id="i1T-o6-kP0"/>
                 <outlet property="view" destination="hv1-FZ-NOM" id="zzr-T4-wh4"/>
             </connections>
         </placeholder>
@@ -25,64 +17,31 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
+                <view contentMode="scaleToFill" id="gjE-LI-kar" customClass="FWTitleBar">
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="58"/>
+                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <connections>
+                        <outlet property="delegate" destination="-1" id="JBZ-Ob-S1o"/>
+                    </connections>
+                </view>
+                <adBannerView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="JUg-5I-gZc">
+                    <rect key="frame" x="0.0" y="460" width="320" height="50"/>
+                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                </adBannerView>
+                <view contentMode="scaleToFill" id="TjQ-Di-LOB" customClass="FWGameToolbar">
+                    <rect key="frame" x="0.0" y="510" width="320" height="58"/>
+                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <connections>
+                        <outlet property="delegate" destination="-1" id="NhY-MV-9A4"/>
+                    </connections>
+                </view>
                 <view contentMode="scaleToFill" id="s64-Ux-IZu" userLabel="Game Board View" customClass="FWBoardView">
-                    <rect key="frame" x="0.0" y="64" width="320" height="410"/>
+                    <rect key="frame" x="0.0" y="58" width="320" height="402"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 </view>
-                <navigationBar contentMode="scaleToFill" translucent="NO" id="prY-BZ-o0f">
-                    <rect key="frame" x="0.0" y="20" width="320" height="44"/>
-                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                    <items>
-                        <navigationItem title="quick play" id="bNu-r7-lkP"/>
-                    </items>
-                </navigationBar>
-                <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="auv-ld-PEy">
-                    <rect key="frame" x="0.0" y="524" width="320" height="44"/>
-                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                    <items>
-                        <barButtonItem systemItem="compose" id="uxD-Lm-yFK">
-                            <connections>
-                                <action selector="menuButtonTapped:" destination="-1" id="nCm-3Y-LWE"/>
-                            </connections>
-                        </barButtonItem>
-                        <barButtonItem style="plain" systemItem="flexibleSpace" id="NQX-oF-5Lo"/>
-                        <barButtonItem systemItem="rewind" id="EQn-Xs-DPW">
-                            <connections>
-                                <action selector="backButtonTapped:" destination="-1" id="atX-kL-Mde"/>
-                            </connections>
-                        </barButtonItem>
-                        <barButtonItem width="10" style="plain" systemItem="fixedSpace" id="Hut-Xq-dhs"/>
-                        <barButtonItem systemItem="pause" id="4cG-Rg-Dn7">
-                            <connections>
-                                <action selector="pauseButtonTapped:" destination="-1" id="YYm-uB-7aV"/>
-                            </connections>
-                        </barButtonItem>
-                        <barButtonItem systemItem="play" id="dOX-pU-ltu">
-                            <connections>
-                                <action selector="playButtonTapped:" destination="-1" id="T8v-cB-qH4"/>
-                            </connections>
-                        </barButtonItem>
-                        <barButtonItem width="10" style="plain" systemItem="fixedSpace" id="uvt-0B-P3h"/>
-                        <barButtonItem systemItem="fastForward" id="ggn-5M-jae">
-                            <connections>
-                                <action selector="nextButtonTapped:" destination="-1" id="DQv-oM-nGc"/>
-                            </connections>
-                        </barButtonItem>
-                        <barButtonItem style="plain" systemItem="flexibleSpace" id="neV-N9-tYg"/>
-                        <barButtonItem systemItem="refresh" id="wEd-Ll-blh">
-                            <connections>
-                                <action selector="restartButtonTapped:" destination="-1" id="ho3-GA-InL"/>
-                            </connections>
-                        </barButtonItem>
-                    </items>
-                    <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    <color key="barTintColor" red="0.36862745098039218" green="0.67450980392156867" blue="0.41960784313725491" alpha="1" colorSpace="deviceRGB"/>
-                </toolbar>
-                <adBannerView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="JUg-5I-gZc">
-                    <rect key="frame" x="0.0" y="474" width="320" height="50"/>
-                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" heightSizable="YES"/>
-                </adBannerView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <nil key="simulatedStatusBarMetrics"/>
