--- a/Vie/View Controllers/Menu/FWPatternPickerViewController.xib
+++ b/Vie/View Controllers/Menu/FWPatternPickerViewController.xib
@@ -36,12 +36,12 @@
                     </connections>
                 </collectionView>
                 <view contentMode="scaleToFill" id="dUU-dk-MVT" userLabel="Search Bar Container">
-                    <rect key="frame" x="0.0" y="58" width="320" height="110"/>
+                    <rect key="frame" x="26" y="58" width="268" height="110"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                     <subviews>
                         <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" minimumFontSize="17" id="MG5-82-XP3" customClass="FWTextField">
-                            <rect key="frame" x="26" y="36" width="268" height="52"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <rect key="frame" x="0.0" y="36" width="268" height="52"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits" returnKeyType="search"/>
                         </textField>
