--- a/Vie/View Controllers/Menu/FWPatternPickerViewController.xib
+++ b/Vie/View Controllers/Menu/FWPatternPickerViewController.xib
@@ -15,7 +15,7 @@
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="LSU-fp-DxA">
+        <view clipsSubviews="YES" contentMode="scaleToFill" id="LSU-fp-DxA">
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
@@ -43,7 +43,11 @@
                             <rect key="frame" x="0.0" y="36" width="268" height="52"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                            <textInputTraits key="textInputTraits" returnKeyType="search"/>
+                            <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="done"/>
+                            <connections>
+                                <action selector="hideKeyboard:" destination="-1" eventType="editingDidEndOnExit" id="BqZ-OD-CUP"/>
+                                <outlet property="delegate" destination="-1" id="M6Z-Z2-mh5"/>
+                            </connections>
                         </textField>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
