--- a/Vie/View Controllers/Menu/FWPatternPickerViewController.xib
+++ b/Vie/View Controllers/Menu/FWPatternPickerViewController.xib
@@ -9,6 +9,8 @@
             <connections>
                 <outlet property="collectionView" destination="puz-N6-5Ir" id="naY-BC-jNG"/>
                 <outlet property="collectionViewLayout" destination="LYG-HZ-Nd9" id="lFF-Rq-dw0"/>
+                <outlet property="noResultContainer" destination="VZt-Qw-nBh" id="PcJ-HT-ORc"/>
+                <outlet property="noResultLabel" destination="iyp-m4-2eg" id="uuY-YY-B57"/>
                 <outlet property="searchBar" destination="MG5-82-XP3" id="Mgy-E1-Y9f"/>
                 <outlet property="searchBarContainer" destination="dUU-dk-MVT" id="7sV-To-GD7"/>
                 <outlet property="view" destination="LSU-fp-DxA" id="HRT-CJ-XhO"/>
@@ -61,11 +63,32 @@
                         <outlet property="delegate" destination="-1" id="0i7-d0-pne"/>
                     </connections>
                 </view>
+                <view contentMode="scaleToFill" id="VZt-Qw-nBh" userLabel="No Result Container">
+                    <rect key="frame" x="0.0" y="168" width="320" height="80"/>
+                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                    <subviews>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="error" id="IiF-X4-8fz">
+                            <rect key="frame" x="149" y="10" width="22" height="22"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        </imageView>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="iyp-m4-2eg">
+                            <rect key="frame" x="0.0" y="42" width="320" height="21"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                </view>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <point key="canvasLocation" x="286" y="309"/>
         </view>
     </objects>
+    <resources>
+        <image name="error" width="22" height="22"/>
+    </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
