--- a/Vie/View Controllers/Menu/FWPatternPickerViewController.xib
+++ b/Vie/View Controllers/Menu/FWPatternPickerViewController.xib
@@ -57,7 +57,7 @@
                 </view>
                 <view contentMode="scaleToFill" id="QwC-tc-uBA" customClass="FWTitleBar">
                     <rect key="frame" x="0.0" y="0.0" width="320" height="58"/>
-                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <connections>
                         <outlet property="delegate" destination="-1" id="0i7-d0-pne"/>
