--- a/Vie/View Controllers/Menu/FWSavedGamePickerViewController.xib
+++ b/Vie/View Controllers/Menu/FWSavedGamePickerViewController.xib
@@ -83,6 +83,7 @@
                 </view>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+            <gestureRecognizers/>
             <point key="canvasLocation" x="286" y="309"/>
         </view>
     </objects>
